[package]
name    = "rust_os"
version = "0.1.0"
edition = "2021"

    [package.metadata.bootimage]
    test-args = [
        "-device",
        "isa-debug-exit,iobase=0xf4,iosize=0x04",
        "-serial",
        "stdio",
        "-display",
        "none",
    ]
    test-success-exit-code = 33
    test-timeout = 50

[dependencies]
futures-util          = { version = "0.3.4", default-features = false, features = ["alloc"] }
conquer-once          = { version = "0.2.0", default-features = false }
crossbeam-queue       = { version = "0.3.11", default-features = false, features = ["alloc"] }
bootloader            = { version = "0.9", features = ["map_physical_memory"] }
volatile              = "0.2.6"
lazy_static           = { version = "1.0", features = ["spin_no_std"] }
spin                  = "0.5.2"
x86_64                = "0.14.2"
uart_16550            = "0.2.0"
pic8259               = "0.10.1"
pc-keyboard           = "0.7.0"
linked_list_allocator = "0.9.0"

# 使用 `cargo build` 编译时需要的配置
[profile.dev]
# panic = "abort" # 禁用panic时栈展开

# 使用 `cargo build --release` 编译时需要的配置
[profile.release]
# panic = "abort" # 禁用 panic 时栈展开

[[bin]]
name = "rust_os"
# test = false
bench = false

[[test]]
name    = "should_panic"
harness = false

[[test]]
name    = "stack_overflow"
harness = false
